--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,29 +4,29 @@ name: Deploy Streamlit Dashboard
 on:
   push:
     branches:
-      - main  # O la rama en la que deseas activar el flujo de trabajo
+      - main  # Se ejecuta cuando se hace un push a la rama 'main'
   pull_request:
     branches:
-      - main
+      - main  # Se ejecuta cuando se hace un pull request hacia la rama 'main'
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Usa una máquina virtual de Ubuntu
+    runs-on: ubuntu-latest  # Usar una máquina virtual de Ubuntu
 
     steps:
     # Paso 1: Configurar Python
-    - name: Set up Python
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'  # Usa la versión de Python que necesites
+        python-version: '3.9'  # Especifica la versión de Python a usar
 
     # Paso 2: Instalar dependencias
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Asegúrate de tener un archivo requirements.txt con las dependencias necesarias
+        pip install -r requirements.txt  # Asegúrate de que el archivo requirements.txt esté en la raíz
 
-    # Paso 3: Ejecutar tu código de Streamlit
+    # Paso 3: Ejecutar la aplicación de Streamlit
     - name: Run Streamlit App
       run: |
-        streamlit run app.py  # Asumiendo que tu archivo principal es 'app.py'
+        streamlit run app.py  # Asumiendo que el archivo principal de tu app es 'app.py'
