--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
       with:
         python-version: '3.9'  # Especifica la versión de Python que deseas usar
 
-    # Paso 2: Instalar dependencias
+    # Paso 2: Instalar dependencias desde la carpeta 'config'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Asegúrate de que el archivo requirements.txt esté en la raíz
+        pip install -r config/requirements.txt  # Asegúrate de que el archivo requirements.txt esté en 'config'
 
     # Paso 3: Ejecutar la aplicación de Streamlit
     - name: Run Streamlit App
