--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r config/requirements.txt  # Asegúrate de que el archivo requirements.txt esté en 'config'
+        pip install -r requirements.txt  # Asegúrate de que el archivo requirements.txt esté en la carpeta config
+      working-directory: ./config  # Indica que el directorio de trabajo es 'config'
 
     # Paso 3: Ejecutar la aplicación de Streamlit
     - name: Run Streamlit App
