--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,13 @@ jobs:
       with:
         python-version: '3.9'  # Especifica la versión de Python que deseas usar
 
-    # Paso 2: Copiar el archivo requirements.txt de la carpeta 'config' a la raíz
-    - name: Copy requirements.txt to root
-      run: cp config/requirements.txt .
-
-    # Paso 3: Instalar dependencias desde el archivo 'requirements.txt' en la raíz
+    # Paso 2: Instalar dependencias directamente
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Instala las dependencias desde la raíz
+        pip install streamlit matplotlib numpy pandas  # Instalación directa de las dependencias necesarias
 
-    # Paso 4: Ejecutar la aplicación de Streamlit
+    # Paso 3: Ejecutar la aplicación de Streamlit
     - name: Run Streamlit App
       run: |
         streamlit run app.py  # Asumiendo que tu archivo principal es 'app.py'
