--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,13 @@ jobs:
       with:
         python-version: '3.9'  # Especifica la versión de Python que deseas usar
 
-    # Paso 2: Instalar dependencias directamente
+    # Paso 2: Instalar dependencias desde la carpeta 'config'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install streamlit matplotlib numpy pandas  # Instalación directa de las dependencias necesarias
+        pip install -r config/requirements.txt  # Instala las dependencias desde 'config/requirements.txt'
 
     # Paso 3: Ejecutar la aplicación de Streamlit
     - name: Run Streamlit App
       run: |
-        streamlit run app.py  # Asumiendo que tu archivo principal es 'app.py'
+        streamlit run app.py  # Ejecuta 'app.py' que está en la raíz
