--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies from config/requirements.txt
         run: |
           pip install --upgrade pip
-          pip install -r config/requirements.txt  # Instala desde tu archivo
+          pip install -r requirements.txt  # Instala desde tu archivo
 
       - name: Test Streamlit execution (Fast Fail)
         run: |
